[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/guild_bar/guild_folder.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/guild_bar/pill.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/guild_bar/mention_badge.tscn" id="3"]

[node name="GuildFolder" type="VBoxContainer"]
custom_minimum_size = Vector2(68, 0)
offset_right = 68.0
script = ExtResource("1")

[node name="FolderRow" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PillContainer" type="CenterContainer" parent="FolderRow"]
layout_mode = 2
custom_minimum_size = Vector2(4, 48)

[node name="Pill" parent="FolderRow/PillContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="ButtonContainer" type="Control" parent="FolderRow"]
layout_mode = 2
custom_minimum_size = Vector2(48, 48)
size_flags_horizontal = 4

[node name="FolderButton" type="Button" parent="FolderRow/ButtonContainer"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
flat = true

[node name="MiniGrid" type="GridContainer" parent="FolderRow/ButtonContainer/FolderButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
columns = 2

[node name="BadgeAnchor" type="Control" parent="FolderRow/ButtonContainer"]
layout_mode = 0
offset_left = 32.0
offset_top = 28.0
offset_right = 32.0
offset_bottom = 28.0

[node name="MentionBadge" parent="FolderRow/ButtonContainer/BadgeAnchor" instance=ExtResource("3")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0

[node name="GuildList" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
